--- a/base-web/src/main/resources/application-test.yml
+++ b/base-web/src/main/resources/application-test.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/rbac?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: 12345678
+    password: ywx041108
 # MP   配置
 mybatis-plus:
   configuration:
