--- a/base-web/pom.xml
+++ b/base-web/pom.xml
@@ -82,7 +82,10 @@
         <version>2.0.235-1</version>
     </dependency>
 
-
+    <dependency>
+        <groupId>com.auth0</groupId>
+        <artifactId>java-jwt</artifactId>
+    </dependency>
 
     </dependencies>
 
